Travel Page for HW1
Places I have traveled

--- a/travel.html
+++ b/travel.html
@@ -1,48 +1,37 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>Gary Modrow</title>
+    <title>Gary's Travel Page</title>
     <meta charset="UTF-8">
     <link rel="stylesheet" type="text/css" href="styles.css">
   </head>
 
   <body>
     <div class="header">
-      <img src="Modrow Headshot.jpg">
-      <h1>Gary Modrow</h1>
-      <h2>M&A Manager and Entrepreneur</h2>
-      <p>Contact Me:</p>
+      <img src="rome.jpeg">
+      <h1>Italy</h1>
+      <p>Italy and Greece were one of the more recent travels, going on my honeymoon. On this trip we went to:</p>
       <ul>
-        <li><a href="http://linkedin.com/in/gmodrow">LinkedIn</a></li>
-        <li><a href="http://facebook.com/gmodrow">Facebook</a></li>
+        <li>Athens</li>
+        <li>Santorini</li>
+        <li>Rome</li>
+        <li>Tuscany</li>
+        <li>Florence</li>
       </ul>
+
+      <p>In Tuscany, we stayed at a bed and breakfast.</p>
+      <p><a href="http://www.tuscanbreaks.com/">Casa Portagioia</a></p>
+
+      <img src="oahu.jpeg">
+      <h2>Oahu</h2>
+      <p>This past summer, I went on a golf trip to the North Shore of Oahu.</p>
+
+      <img src="prague.jpeg">
+      <h3>Prague</h3>
+      <p>A few years ago, I traveled to gorgeous Prague.</p>
+
     </div>
 
-    <h3>Summary</h3>
-    <p>
-      Gary is an M&A Manager for The GSI Group, as well as co-founder of the startup GoodStanding.
-    </p>
-
-    <h3>Experience</h3>
-
-    <h4>The GSI Group</h4>
-
-    <h4>M&A Manager, 2014-Present</h4>
-    <p>Responsible for $190 million in closed deals.</p>
-
-    <h3>Skills</h3>
-    <ul>
-      <li>Transaction sourcing and execution</li>
-      <li>Fantasy football</li>
-      <li>Throwing a ball to my dog...no retrieval though, that is all her.</li>
-      <li>Surfing the interwebs.</li>
-    </ul>
-
-    <h3>Education</h3>
-    <ul>
-      <li>MBA, <em>Northwestern University, 2016</em></li>
-      <li>Bachelor of Arts, Accounting, <em>Illinois Wesleyan University, 2007</em></li>
-    </ul>
 
 
   </body>
