--- a/travel.html
+++ b/travel.html
@@ -28,7 +28,7 @@
 
       <img src="prague.jpeg">
       <h3>Prague</h3>
-      <p>A few years ago, I traveled to gorgeous Prague.</p>
+      <p>A few years ago, I traveled to Prague.</p>
 
     </div>
 
